...
import 'package:wakelock/wakelock.dart';

enum StripAction { refresh, about }

class ComicPage extends StatelessWidget {
  final _pageTextController = TextEditingController();
  static const _kGoToPageText = 'Перейти на страницу';

  @override
  Widget build(BuildContext context) {
    final viewModel = ComicPageViewModelWidget.of(context).viewModel;
    return Scaffold(
      // When keyboard appears it is breaks layout if it is not scrollable.
...
        TextButton(
          onPressed: () {
            onGoToPage.add(_pageTextController.text);
            Navigator.of(context).pop();
          },
          child: Text(
            'Перейти',
            style: TextStyle(color: Theme.of(context).primaryColor),
          ),
        ),
      ],
    );
  }
...
