...
          Comics(
            homePageURL: Uri.parse(
                'https://comicslate.org/$language/sci-fi/freefall/index'),
            thumbnailURL: Uri.parse(
                'https://comicslate.org/_media/$language/sci-fi/freefall/main.png'),
            id: 'sci-fi:freefall',
            name: 'Freefall',
            numberOfStrips: 3900,
            rating: 5,
            updatedAt: DateTime.now().subtract(const Duration(days: 2)),
          ),
          Comics(
            homePageURL: Uri.parse(
...
